dont worry about it

--- a/nx.json
+++ b/nx.json
@@ -28,7 +28,7 @@
       }
     }
   ],
-  "defaultProject": "complete-pachabel",
+  "defaultProject": "complete-pachelbel",
   "generators": {
     "@nx/react": {
       "application": {
